test/constrained-generics/basic/withdecl/withdecl-union-notinterface.good
withdecl-union-notinterface.chpl:5: error: inheritance is not currently supported for unions
